// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TampilanProduk Component renders products correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="produk"
      >
        <h1
          class="produk__title"
        >
          Daftar Produk
        </h1>
        <div
          class="produk__content"
        >
          <div
            class="produk__content__item"
            style="cursor: pointer;"
          >
            <div
              class="produk__content__item__image"
            >
              <img
                alt="Produk Test"
                src="/test.jpg"
              />
            </div>
            <h4
              class="produk__content__item__name"
            >
              Produk Test
            </h4>
            <p
              class="produk__content__item__category"
            >
              Kategori Test
            </p>
            <p
              class="produk__content__item__price"
            >
              Rp 
              100.000
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="produk"
    >
      <h1
        class="produk__title"
      >
        Daftar Produk
      </h1>
      <div
        class="produk__content"
      >
        <div
          class="produk__content__item"
          style="cursor: pointer;"
        >
          <div
            class="produk__content__item__image"
          >
            <img
              alt="Produk Test"
              src="/test.jpg"
            />
          </div>
          <h4
            class="produk__content__item__name"
          >
            Produk Test
          </h4>
          <p
            class="produk__content__item__category"
          >
            Kategori Test
          </p>
          <p
            class="produk__content__item__price"
          >
            Rp 
            100.000
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TampilanProduk Component renders skeleton when products is empty 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="produk"
      >
        <h1
          class="produk__title"
        >
          Daftar Produk
        </h1>
        <div
          class="produk__content"
        >
          <div
            class="produk__content__skeleton"
          >
            <div
              class="produk__content__skeleton__image"
            />
            <div
              class="produk__content__skeleton__name"
            />
            <div
              class="produk__content__skeleton__category"
            />
            <div
              class="produk__content__skeleton__price"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="produk"
    >
      <h1
        class="produk__title"
      >
        Daftar Produk
      </h1>
      <div
        class="produk__content"
      >
        <div
          class="produk__content__skeleton"
        >
          <div
            class="produk__content__skeleton__image"
          />
          <div
            class="produk__content__skeleton__name"
          />
          <div
            class="produk__content__skeleton__category"
          />
          <div
            class="produk__content__skeleton__price"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
